--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.pth
 .jupyter_checkpoints
 .DS_Store
 *.mp4
@@ -6,3 +7,6 @@ poses
 out
 detectron2_out
 datasets
+*.ipynb_checkpoints
+data
+*.pyc
