--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mmaction2"]
 	path = mmaction2
-	url = https://github.com/open-mmlab/mmaction2
+	url = https://github.com/iucario/mmaction2
