--- a/conda_env.yml
+++ b/conda_env.yml
@@ -1,4 +1,4 @@
-name: workout
+name: mmlab
 channels:
   - pytorch
   - conda-forge
@@ -122,6 +122,7 @@ dependencies:
     - attrs==21.4.0
     - audioread==2.1.9
     - av==9.1.1
+    - babel==2.10.1
     - backoff==1.10.0
     - bcrypt==3.2.2
     - beautifulsoup4==4.11.1
@@ -151,6 +152,7 @@ dependencies:
     - flatbuffers==2.0
     - fonttools==4.32.0
     - frozenlist==1.3.0
+    - git-filter-repo==2.34.0
     - gitdb==4.0.9
     - gitpython==3.1.27
     - google-auth==2.6.6
@@ -173,8 +175,12 @@ dependencies:
     - jinja2==3.1.1
     - joblib==1.1.0
     - json-tricks==3.15.5
+    - json5==0.9.8
     - jsonschema==4.4.0
+    - jupyter-server==1.17.0
+    - jupyterlab==3.4.2
     - jupyterlab-pygments==0.2.2
+    - jupyterlab-server==2.14.0
     - jupyterlab-widgets==1.1.0
     - kiwisolver==1.4.2
     - kwarray==0.6.0
@@ -200,11 +206,13 @@ dependencies:
     - mpmath==1.2.1
     - multidict==6.0.2
     - munkres==1.1.4
+    - nbclassic==0.3.7
     - nbclient==0.6.0
     - nbconvert==6.5.0
     - nbformat==5.3.0
     - networkx==2.8
     - notebook==6.4.10
+    - notebook-shim==0.1.0
     - numba==0.55.1
     - numpy==1.22.3
     - oauthlib==3.2.0
@@ -285,6 +293,7 @@ dependencies:
     - wandb==0.12.16
     - webcolors==1.11.1
     - webencodings==0.5.1
+    - websocket-client==1.3.2
     - werkzeug==2.1.2
     - widgetsnbextension==3.6.0
     - xdoctest==1.0.0
