--- a/app/my-app/package.json
+++ b/app/my-app/package.json
@@ -6,20 +6,20 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.0",
+    "@mui/material": "^5.8.1",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^27.5.1",
-    "@types/node": "^16.11.36",
+    "@types/node": "^17.0.36",
     "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
+    "@types/react-dom": "^18.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-webcam": "^7.0.1",
     "socket.io-client": "^4.5.1",
-    "typescript": "^4.6.4",
+    "typescript": "^4.7.2",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
