Add setup.py and update imports Add script for building binary classification, notebook for binary classifier

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 checkpoints
-work_dirs
+work_dirs/
+wandb/
 .jupyter_checkpoints
 .DS_Store
 *.mp4
@@ -21,3 +22,5 @@ datasets/kinetics700_2020/*
 
 *.pyc
 *.code-workspace
+
+*.egg-info
