--- a/workoutdetector/configs/lit_img.yaml
+++ b/workoutdetector/configs/lit_img.yaml
@@ -1,57 +1,17 @@
-seed_everything: 0
+seed: 3407
 trainer:
-  logger:
-    - class_path: loggers.TensorBoardLogger
-      init_args:
-        save_dir: /home/umi/projects/WorkoutDetector/log/image_model/tensorboard
-    - class_path: loggers.WandbLogger
-      init_args:
-        project: binary-action-classification
-        save_dir: /home/umi/projects/WorkoutDetector/log/image_model
-  checkpoint_callback: null
-  enable_checkpointing: true
-  callbacks:
-    - class_path: pytorch_lightning.callbacks.EarlyStopping
-      init_args:
-        patience: 5
-        monitor: train/loss
-        mode: min
-    - class_path: pytorch_lightning.callbacks.LearningRateMonitor
-      init_args:
-        logging_interval: step
-  default_root_dir: /home/umi/projects/WorkoutDetector/log/image_model
-  gradient_clip_val: null
-  gradient_clip_algorithm: null
-  process_position: 0
+  default_root_dir: /home/umi/projects/WorkoutDetector/log
+  max_epochs: 50
+  enable_checkpointing: null
   num_nodes: 1
-  num_processes: null
   devices: 1
   gpus: 1
-  auto_select_gpus: false
-  tpu_cores: null
-  ipus: null
   log_gpu_memory: true
-  progress_bar_refresh_rate: null
   enable_progress_bar: true
   overfit_batches: 0.0
-  track_grad_norm: -1
   check_val_every_n_epoch: 1
-  fast_dev_run: false
-  accumulate_grad_batches: null
-  max_epochs: 50
   min_epochs: 1
-  max_steps: -1
-  min_steps: 1
-  max_time: null
-  limit_train_batches: null
-  limit_val_batches: null
-  limit_test_batches: null
-  limit_predict_batches: null
-  val_check_interval: null
-  flush_logs_every_n_steps: null
-  log_every_n_steps: 50
-  accelerator: null
-  strategy: null
+  accelerator: auto
   sync_batchnorm: false
   precision: 32
   enable_model_summary: true
@@ -59,31 +19,45 @@ trainer:
   weights_save_path: null
   num_sanity_val_steps: 2
   resume_from_checkpoint: null
-  profiler: null
-  benchmark: null
-  deterministic: null
-  reload_dataloaders_every_n_epochs: 0
+  benchmark: false
+  deterministic: true
   auto_lr_find: false
-  replace_sampler_ddp: true
-  detect_anomaly: false
-  auto_scale_batch_size: false
   prepare_data_per_node: null
-  plugins: null
-  amp_backend: native
-  amp_level: null
-  move_metrics_to_cpu: false
-  multiple_trainloader_mode: max_size_cycle
-  stochastic_weight_avg: false
-  terminate_on_nan: null
+  early_stopping: true
+  patience: 10
 optimizer:
-  class_path: torch.optim.Adam
-  init_args:
-    lr: 0.01
+  method: AdamW
+  lr: 0.0001
+  momentum: 0.9
+  weight_decay: 0.00001
+  eps: 0.000000001
 lr_scheduler:
-  class_path: torch.optim.lr_scheduler.ExponentialLR
-  init_args:
-    gamma: 0.1
+  policy: StepLR
+  gamma: 0.1
+  step: 10
 model:
-  backbone_model: mobilenetv3_large_100
-  learning_rate: 0.005
-ckpt_path: /home/umi/projects/WorkoutDetector/log/image_model/checkpoints
+  num_class: 2
+  backbone_model: convnext_base
+data:
+  dataset_type: ImageDataset
+  data_root: /home/umi/data/situp
+  batch_size: 8
+  train:
+    anno: /home/umi/data/situp/train.txt
+    data_prefix: train
+  val:
+    anno: /home/umi/data/situp/val.txt
+    data_prefix: val
+  test:
+    anno: null
+    data_prefix: null
+  num_workers: 4
+  transform: null
+  target_transform: null
+log:
+  enable_tensorboard: true
+  enable_wandb: true
+  log_every_n_steps: 20
+  wandb:
+    project: situp-image-selected
+  output_dir: /home/umi/projects/WorkoutDetector/log/situp-image-selected
