✨Time Shift Module✨ Get it run, but not learning. Need to check the optimizer. Separate trainer and train_img. Add some configs. Add FrameDataset

--- a/workoutdetector/configs/pull_up.yaml
+++ b/workoutdetector/configs/pull_up.yaml
@@ -1,7 +1,7 @@
 trainer:
-  default_root_dir: log
+  default_root_dir: exp/pull-up-compare
+  max_epochs: 30
   early_stopping: false
-  max_epochs: 50
   enable_checkpointing: null
   num_nodes: 1
   devices: 1
@@ -26,51 +26,42 @@ trainer:
   patience: 10
 optimizer:
   method: AdamW
-  lr: 0.001
+  lr: 0.00005
   momentum: 0.9
-  weight_decay: 1.0e-5
-  eps: 1.0e-8
+  weight_decay: 0.0001
+  eps: 0.00000001
 lr_scheduler:
   policy: StepLR
   gamma: 0.1
-  step: 7
+  step: 10
 model:
   num_class: 2
-  num_segments: 8
-  base_model: resnet50
-  consensus_type: avg
-  img_feature_dim: 512
-  is_shift: true
-  shift_div: 8
-  shift_place: blockres
-  fc_lr5: false
-  temporal_pool: false
-  non_local: false
+  backbone_model: convnext_base
 data:
-  dataset_type: FrameDataset
-  data_root: data/RepCount/rawframes
-  num_segments: 8
-  filename_tmpl: 'img_{:05}.jpg'
-  batch_size: 2
+  dataset_type: ImageDataset
+  data_root: /home/umi/data/pull-up-relabeled
+  batch_size: 8
   train:
-    anno: data/relabeled/pull_up/test.txt
+    anno: /home/umi/data/pull-up-relabeled/train.txt
     data_prefix: null
   val:
-    anno: data/relabeled/pull_up/val.txt
+    anno: /home/umi/data/pull-up-relabeled/val.txt
     data_prefix: null
   test:
-    anno: data/relabeled/pull_up/test.txt
+    anno: /home/umi/data/pull-up-relabeled/test.txt
     data_prefix: null
   num_workers: 4
+  transform: null
+  target_transform: null
 log:
-  name: pull-up-relabeled
-  output_dir: log/pull-up-relabeled
+  output_dir: exp/pull-up-compare
+  name: pull-up-relabel-convnext_base-lr_5e-5
   log_every_n_steps: 20
   tensorboard:
     enable: true
   wandb:
     enable: false
-    offline: False
+    offline: false
     project: pull-up
 seed: 0
 train: true
