--- a/workoutdetector/configs/workouts.yaml
+++ b/workoutdetector/configs/workouts.yaml
@@ -25,8 +25,8 @@ trainer:
   prepare_data_per_node: null
   patience: 10
 optimizer:
-  method: AdamW
-  lr: 0.005
+  method: SGD
+  lr: 0.0005
   momentum: 0.9
   weight_decay: 1.0e-4
   eps: 1.0e-8
