--- a/workoutdetector/configs/workouts.yaml
+++ b/workoutdetector/configs/workouts.yaml
@@ -1,17 +1,19 @@
 trainer:
-  default_root_dir: /content/exp/workouts-11-tsm
-  max_epochs: 50
+  default_root_dir: exp/workouts-11-tsm
+  max_epochs: 10
   early_stopping: false
   enable_checkpointing: null
   num_nodes: 1
   devices: 1
   gpus: 1
+  strategy: dp
+  accelerator: gpu
+  auto_select_gpus: true
   log_gpu_memory: true
   enable_progress_bar: true
   overfit_batches: 0.0
   check_val_every_n_epoch: 1
   min_epochs: 1
-  accelerator: auto
   sync_batchnorm: false
   precision: 32
   enable_model_summary: true
@@ -24,16 +26,17 @@ trainer:
   auto_lr_find: false
   prepare_data_per_node: null
   patience: 10
+  fast_dev_run: true
 optimizer:
   method: SGD
-  lr: 0.0005
+  lr: 0.005
   momentum: 0.9
   weight_decay: 1.0e-4
   eps: 1.0e-8
 lr_scheduler:
   policy: StepLR
   gamma: 0.1
-  step: 5
+  step: 10
 model:
   num_class: 11
   num_segments: 8
@@ -48,34 +51,34 @@ model:
   non_local: false
 data:
   dataset_type: FrameDataset
-  data_root: /content/WorkoutDetector/data/Workouts/rawframes/
+  data_root: data/Workout/rawframes/
   num_segments: 8
   filename_tmpl: 'img_{:05}.jpg'
   anno_col: 3
-  batch_size: 2
+  batch_size: 8
   train:
-    anno: data/Workouts/rawframes/train.txt
+    anno: data/Workout/rawframes/train.txt
     data_prefix: null
   val:
-    anno: data/Workouts/rawframes/val.txt
+    anno: data/Workout/rawframes/val.txt
     data_prefix: null
   test:
-    anno: data/Workouts/rawframes/test.txt
+    anno: data/Workout/rawframes/test.txt
     data_prefix: null
   num_workers: 4
 log:
-  output_dir: /content/WorkoutDetector/exp/workouts-11-tsm
+  output_dir: exp/workouts-11-tsm
   name: workouts-11-tsm
   log_every_n_steps: 20
   tensorboard:
     enable: true
   wandb:
-    enable: true
-    offline: false
+    enable: false
+    offline: true
     project: workouts-11-tsm
 seed: 0
 train: true
-checkpoint: /content/WorkoutDetector/checkpoints/TSM_somethingv2_RGB_resnet50_shift8_blockres_avg_segment8_e45.pth
+checkpoint: checkpoints/TSM_somethingv2_RGB_resnet50_shift8_blockres_avg_segment8_e45.pth
 
 callbacks:
   modelcheckpoint:
