--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -8,3 +8,9 @@ pytorch-lightning
 tqdm
 fvcore
 timm
+decord
+opencv-python
+opencv-python-headless
+opencv-contrib-python
+opencv-contrib-python-headless
+pytorchvideo
