--- a/workoutdetector/configs/repcount_12_tsm.yaml
+++ b/workoutdetector/configs/repcount_12_tsm.yaml
@@ -4,8 +4,8 @@ trainer:
   early_stopping: false
   enable_checkpointing: null
   num_nodes: 1
-  devices: 1
-  gpus: 1
+  devices: 8
+  gpus: auto
   log_gpu_memory: true
   enable_progress_bar: true
   overfit_batches: 0.0
@@ -16,24 +16,25 @@ trainer:
   precision: 32
   enable_model_summary: true
   weights_summary: top
-  weights_save_path: null
   num_sanity_val_steps: 2
   resume_from_checkpoint: null
   benchmark: false
   deterministic: true
   auto_lr_find: false
+  auto_scale_batch_size: null
   prepare_data_per_node: null
   patience: 10
+  fast_dev_run: false
 optimizer:
   method: SGD
-  lr: 0.0005
+  lr: 0.0015
   momentum: 0.9
-  weight_decay: 1.0e-4
+  weight_decay: 5.0e-4
   eps: 1.0e-8
 lr_scheduler:
   policy: StepLR
   gamma: 0.1
-  step: 10
+  step: 7
 model:
   num_class: 12
   num_segments: 8
@@ -48,7 +49,7 @@ model:
   non_local: false
 data:
   dataset_type: FrameDataset
-  data_root: data/Workouts/rawframes/
+  data_root: data/RepCount/rawframes/
   num_segments: 8
   filename_tmpl: 'img_{:05}.jpg'
   anno_col: 4
@@ -62,7 +63,7 @@ data:
   test:
     anno: data/Binary/all-test.txt
     data_prefix: null
-  num_workers: 4
+  num_workers: 8
 log:
   output_dir: exp/repcount-12-tsm
   name: repcount-12-tsm
