Mod config, dockerfile

--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -76,6 +76,7 @@ RUN adduser --disabled-password --gecos '' --shell /bin/bash user \
     && chown -R ${UID}:${GID} /work
 RUN echo "user ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/90-user
 USER user
+RUN export $PATH=$PATH:/home/user/.local/bin
 
 # All users can use /home/user as their home directory
 ENV HOME=/home/user
