--- a/workoutdetector/configs/tdn.yaml
+++ b/workoutdetector/configs/tdn.yaml
@@ -1,5 +1,5 @@
 trainer:
-  default_root_dir: exp/repcount-12-tsm # where to save logs and checkpoints
+  default_root_dir: exp/repcount-12-tdn # where to save logs and checkpoints
   max_epochs: 50
   enable_checkpointing: true
   num_nodes: 1
@@ -7,7 +7,7 @@ trainer:
   gpus: auto
   log_gpu_memory: null
   enable_progress_bar: true
-  overfit_batches: 0.0
+  overfit_batches: 10
   check_val_every_n_epoch: 1
   min_epochs: 1
   accelerator: auto
@@ -35,42 +35,41 @@ lr_scheduler:
   step: 8
 
 model:
+  model_type: TDN
   num_class: 12
   num_segments: 8
+  num_frames: 5
   base_model: resnet50
   consensus_type: avg
-  img_feature_dim: 256
-  is_shift: true
-  shift_div: 8
-  shift_place: blockres
-  fc_lr5: true
-  temporal_pool: false
-  non_local: false
-  checkpoint: checkpoints/finetune/TSM_somethingv2_RGB_resnet50_shift8_blockres_avg_segment8_e45.pth
+  dropout: 0.5
+  partial_bn: false
+  fc_lr5: false
+  checkpoint: checkpoints/finetune/tdn_sthv2_r50_8x1x1.pth
 
 data:
-  dataset_type: FrameDataset
-  data_root: /home/root/data
+  dataset_type: TDNDataset
+  data_root: /home/user/data
   num_segments: 8
+  num_frames: 5
   filename_tmpl: 'img_{:05}.jpg'
   anno_col: 4
   batch_size: 4
+  num_workers: 8
   train:
-    anno: /home/root/data/Binary/all-train.txt
+    anno: /home/user/data/Binary/all-train.txt
     data_prefix: null
     transform:
       person_crop: false
   val:
-    anno: /home/root/data/Binary/all-val.txt
+    anno: /home/user/data/Binary/all-val.txt
     data_prefix: null
     transform:
       person_crop: false
   test:
-    anno: /home/root/data/Binary/all-test.txt
+    anno: /home/user/data/Binary/all-test.txt
     data_prefix: null
     transform:
       person_crop: false
-  num_workers: 8
 
 log:
   output_dir: null # os.path.join(trainer.default_root_dir, timestamp)
@@ -80,10 +79,10 @@ log:
   tensorboard:
     enable: true
   wandb:
-    enable: true
+    enable: false
     offline: false
-    project: repcount-12-tsm
-    name: repcount-12-tsm
+    project: repcount-12-tdn
+    name: repcount-12-tdn
 
 callbacks:
   modelcheckpoint:
