Squashed commit of the following:
commit 09a125d432ef655579dfaf1ff99b3495ba82b257
Author: iucario <16816842+iucario@users.noreply.github.com>
Date:   Tue Jul 12 17:30:38 2022 +0900

    Fix trainer ddp gather
    best val acc on epoch should be working

--- a/workoutdetector/configs/defaults.yaml
+++ b/workoutdetector/configs/defaults.yaml
@@ -105,4 +105,6 @@ callbacks:
 
 seed: 0
 train: true
-timestamp: null # Will be initialized in python file
+timestamp: null # Will be initialized in python file. Bug.
+# Creates duplicate folders because of Pytorch Lightning's DDP strategy.
+# Better input from shell script `ts=$(date +%Y%m%d-%H%M%S)`
