--- a/workoutdetector/configs/repcount_12_tsm.yaml
+++ b/workoutdetector/configs/repcount_12_tsm.yaml
@@ -25,18 +25,20 @@ trainer:
   fast_dev_run: false
 optimizer:
   method: SGD
-  lr: 0.005
+  lr: 0.0015
   momentum: 0.9
   weight_decay: 5.0e-4
   eps: 1.0e-8
 lr_scheduler:
   policy: StepLR
   gamma: 0.1
-  step: 8
+  step: 7
 
 model:
+  model_type: TSM
   num_class: 12
   num_segments: 8
+  num_frames: 1
   base_model: resnet50
   consensus_type: avg
   img_feature_dim: 256
@@ -50,23 +52,23 @@ model:
 
 data:
   dataset_type: FrameDataset
-  data_root: /home/root/data
+  data_root: /home/user/data
   num_segments: 8
   filename_tmpl: 'img_{:05}.jpg'
   anno_col: 4
   batch_size: 4
   train:
-    anno: /home/root/data/Binary/all-train.txt
+    anno: /home/user/data/Binary/all-train.txt
     data_prefix: null
     transform:
       person_crop: false
   val:
-    anno: /home/root/data/Binary/all-val.txt
+    anno: /home/user/data/Binary/all-val.txt
     data_prefix: null
     transform:
       person_crop: false
   test:
-    anno: /home/root/data/Binary/all-test.txt
+    anno: /home/user/data/Binary/all-test.txt
     data_prefix: null
     transform:
       person_crop: false
@@ -83,7 +85,7 @@ log:
     enable: true
     offline: false
     project: repcount-12-tsm
-    name: repcount-12-tsm
+    name: null
 
 callbacks:
   modelcheckpoint:
