Squashed commit of the following:
commit def5dc1c756fcd4520412cafbf17962f8fb43d2f
Author: iucario <16816842+iucario@users.noreply.github.com>
Date:   Tue Jul 12 17:32:06 2022 +0900

    Squashed commit of the following:

    commit 09a125d432ef655579dfaf1ff99b3495ba82b257
    Author: iucario <16816842+iucario@users.noreply.github.com>
    Date:   Tue Jul 12 17:30:38 2022 +0900

        Fix trainer ddp gather
        best val acc on epoch should be working

commit c171eb7c30b22f62fe41f5c2486598a4d15840a9
Author: iucario <16816842+iucario@users.noreply.github.com>
Date:   Tue Jul 12 15:32:52 2022 +0900

    Add shell scripts

commit dba11e7927c484df52a9e96dc4236d9c7198b6c1
Author: iucario <16816842+iucario@users.noreply.github.com>
Date:   Mon Jul 11 22:59:47 2022 +0900

    Fix config
    Mod tsm.yaml train 6 classes

--- a/workoutdetector/configs/defaults.yaml
+++ b/workoutdetector/configs/defaults.yaml
@@ -41,6 +41,7 @@ model:
 
   # Frames around the center to calculate difference. Used in Temportal Difference Network
   num_frames: 1
+  example_input_array: [1, 8, 3, 224, 224]
   base_model: resnet50
   consensus_type: avg
 
@@ -88,8 +89,8 @@ log:
   wandb:
     enable: true
     offline: false
-    project: repcount-12-tsm
-    name: repcount-12-tsm
+    project: default
+    name: null
 
 callbacks:
   modelcheckpoint:
@@ -104,4 +105,6 @@ callbacks:
 
 seed: 0
 train: true
-timestamp: null # Will be initialized in python file
+timestamp: null # Will be initialized in python file. Bug.
+# Creates duplicate folders because of Pytorch Lightning's DDP strategy.
+# Better input from shell script `ts=$(date +%Y%m%d-%H%M%S)`
