--- a/workoutdetector/configs/tdn.yaml
+++ b/workoutdetector/configs/tdn.yaml
@@ -1,36 +1,15 @@
 trainer:
   default_root_dir: exp/repcount-12-tdn # where to save logs and checkpoints
   max_epochs: 50
-  enable_checkpointing: true
-  num_nodes: 1
-  devices: auto
-  gpus: auto
-  log_gpu_memory: null
-  enable_progress_bar: true
-  overfit_batches: 10
-  check_val_every_n_epoch: 1
-  min_epochs: 1
-  accelerator: auto
-  sync_batchnorm: false
-  precision: 32
-  enable_model_summary: true
-  weights_summary: top
-  num_sanity_val_steps: 2
-  resume_from_checkpoint: null
-  benchmark: false
-  deterministic: true
-  auto_lr_find: false
-  auto_scale_batch_size: null
-  prepare_data_per_node: null
-  fast_dev_run: false
+
 optimizer:
-  method: SGD
+  method: TSN
   lr: 0.005
   momentum: 0.9
   weight_decay: 5.0e-4
   eps: 1.0e-8
 lr_scheduler:
-  policy: StepLR
+  policy: TDN
   gamma: 0.1
   step: 8
 
@@ -39,6 +18,7 @@ model:
   num_class: 12
   num_segments: 8
   num_frames: 5
+  example_input_array: [40, 3, 224, 224]
   base_model: resnet50
   consensus_type: avg
   dropout: 0.5
@@ -51,7 +31,7 @@ data:
   data_root: /home/user/data
   num_segments: 8
   num_frames: 5
-  filename_tmpl: 'img_{:05}.jpg'
+  filename_tmpl: "img_{:05}.jpg"
   anno_col: 4
   batch_size: 4
   num_workers: 8
