--- a/app/my-app/package.json
+++ b/app/my-app/package.json
@@ -47,7 +47,7 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "react-scripts": "^2.1.3"
   }
 }
